discussion/kv_engine/176479/176479_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

Throttle (external) DCP connections

Throttle the DCP Producer streams unless the connection
hold the Unthrottled privilege.

Test with:

    ./dcpdrain --user user --password password --bucket bucket

Change-Id: If084ede1a2388564368a24c76c9ce95c5116bcc1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-26 19:30:57.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-26 20:04:59.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19403/ : ABORTED

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T19:44:49.872Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T19:44:49.872Z] Value of: wu.has_value()
[2022-06-26T19:44:49.872Z]   Actual: false
[2022-06-26T19:44:49.872Z] Expected: true
[2022-06-26T19:44:49.872Z] mutate should use WU
[2022-06-26T19:44:49.872Z] [  FAILED  ] ServerlessTest.UnitsReported (3 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19403/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19403/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47066/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/serverless_test.cc(258): error: Value of: wu.has_value()
  Actual: false
Expected: true
mutate should use WU
[  FAILED  ] ServerlessTest.UnitsReported (6 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47066/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18317/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/daemon/thread.cc b/daemon/thread.cc
index 04e158b86..825a4f1be 100644
--- a/daemon/thread.cc
+++ b/daemon/thread.cc
@@ -87,7 +87,7 @@ static void create_worker(void (*func)(void*),
 void FrontEndThread::maybeRegisterThrottleableDcpConnection(
         Connection&amp; connection) {
     if (!connection.isUnthrottled()) {
-        dcp_connections.push_back(connection);
+        dcp_connections.emplace_back(connection);
     }
 }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18317/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:90:25: warning: use emplace_back instead of push_back [modernize-use-emplace]
        dcp_connections.push_back(connection);
                        ^~~~~~~~~~
                        emplace_back(
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:90:25: note: FIX-IT applied suggested code changes
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/daemon/thread.cc b/daemon/thread.cc
index 04e158b86..825a4f1be 100644
--- a/daemon/thread.cc
+++ b/daemon/thread.cc
@@ -87,7 +87,7 @@ static void create_worker(void (*func)(void*),
 void FrontEndThread::maybeRegisterThrottleableDcpConnection(
         Connection&amp; connection) {
     if (!connection.isUnthrottled()) {
-        dcp_connections.push_back(connection);
+        dcp_connections.emplace_back(connection);
     }
 }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21181/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T19:54:36.528Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T19:54:36.528Z] Value of: wu.has_value()
[2022-06-26T19:54:36.528Z]   Actual: false
[2022-06-26T19:54:36.528Z] Expected: true
[2022-06-26T19:54:36.528Z] mutate should use WU
[2022-06-26T19:54:36.528Z] [  FAILED  ] ServerlessTest.UnitsReported (9 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21181/ )

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/cookie.cc:209 in Cookie::getRequest() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21181/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20533/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T19:53:13.644Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T19:53:13.644Z] Value of: wu.has_value()
[2022-06-26T19:53:13.644Z]   Actual: false
[2022-06-26T19:53:13.644Z] Expected: true
[2022-06-26T19:53:13.644Z] mutate should use WU
[2022-06-26T19:53:13.644Z] [  FAILED  ] ServerlessTest.UnitsReported (4 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20533/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8087/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T19:50:10.876Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T19:50:10.876Z] Value of: wu.has_value()
[2022-06-26T19:50:10.876Z]   Actual: false
[2022-06-26T19:50:10.876Z] Expected: true
[2022-06-26T19:50:10.876Z] mutate should use WU
[2022-06-26T19:50:10.876Z] [  FAILED  ] ServerlessTest.UnitsReported (1 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8087/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20189/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T19:47:13.229Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T19:47:13.229Z] Value of: wu.has_value()
[2022-06-26T19:47:13.229Z]   Actual: false
[2022-06-26T19:47:13.229Z] Expected: true
[2022-06-26T19:47:13.229Z] mutate should use WU
[2022-06-26T19:47:13.229Z] [  FAILED  ] ServerlessTest.UnitsReported (4 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20189/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20189/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28569/ : FAILURE

Failure of GoogleTest "ServerlessTest.UnitsReported":

<pre>
[ RUN      ] ServerlessTest.UnitsReported
[2022-06-26T19:50:35.278Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/serverless_test.cc:258: Failure
[2022-06-26T19:50:35.278Z] Value of: wu.has_value()
[2022-06-26T19:50:35.278Z]   Actual: false
[2022-06-26T19:50:35.278Z] Expected: true
[2022-06-26T19:50:35.278Z] mutate should use WU
[2022-06-26T19:50:35.278Z] [  FAILED  ] ServerlessTest.UnitsReported (3 ms)
ServerlessTest.UnitsReported
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28569/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17443/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39535/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7986/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
